--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:+'
     def room_version = "2.4.3"
     kapt "androidx.room:room-compiler:$room_version"
     implementation 'com.google.code.gson:gson:2.9.1'
