--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:theme="@style/Theme.Cvtamplate2"
         tools:targetApi="31">
         <activity
+            android:name=".Result"
+            android:exported="false" />
+        <activity
             android:name=".ResumePage"
             android:exported="true"
             android:theme="@style/Theme.NoActionBar" />
         <activity
             android:name=".FormPart2"
             android:exported="true"
-            android:theme="@style/Theme.NoActionBar"/>
+            android:theme="@style/Theme.NoActionBar" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
